==== version history of open-console-core

version 0.04:

	Fixes:
	- remove \r from input texts.

	Improvements:
	- add some programming instructions.
	- add is_pivate_ipv4() and is_private_ipv6().
	- generate HTML version of all OpenConsole modules.
	- move connection to Users and Assets to OwnerConsole.
	- every object got an updated field.

version 0.03: Sat 28 Sep 13:19:43 CEST 2024

	Fixes:
	- too much in MANIFEST

	Improvements:
	- many new fields in Service objects.
	- Contract object

version 0.02: Wed 18 Sep 14:56:19 CEST 2024

	Fixes:
	- requiredParams not always lines, may be text or other.

	Improvements:
	- add ::Util::domain_suffix()
	- add ::Proof::Website::hostUTF8()
	- ::Util token work
	- introduce more abstract Asset, which takes most of Proof
	- simplify use of schema (object version)
	- promote unique tokens to replace database id
	- uniform load/remove/save
	- identity ownership only as sub-set of Account
	- encryption of secrets into ::Util
	- add ::Util::duration()
	- add ::Util::now()
	- move expire and status to any object, from assets only

version 0.01: Wed Sep 09 09:21:50 PM CEST 2024
	- Initial