@@ -11,6 +11,7 @@ version 0.04:
 	- generate HTML version of all OpenConsole modules.
 	- move connection to Users and Assets to OwnerConsole.
 	- every object got an updated field.
+	- ajax session addInfo.
 
 version 0.03: Sat 28 Sep 13:19:43 CEST 2024
 
